[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Buildings/Barrack/Barrack.gd" type="Script" id=2]
[ext_resource path="res://src/UI/BarrackUI/BarrackUI.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 99.4682, 94.7422 )

[node name="Barrack" type="Node2D"]
position = Vector2( 306.442, 224.82 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="ButtonBuild" type="Button" parent="."]
margin_left = -34.5831
margin_top = -22.1548
margin_right = 35.4169
margin_bottom = 22.8452
disabled = true
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="BarrackUI" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PositionUI" type="Position2D" parent="."]
position = Vector2( 125.359, -107.266 )

[node name="ExitPosition" type="Position2D" parent="."]
position = Vector2( -2.45547, 122.774 )
[connection signal="pressed" from="ButtonBuild" to="." method="_on_ButtonBuild_pressed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
